--- a/PS3_KTakata.Rmd
+++ b/PS3_KTakata.Rmd
@@ -39,6 +39,14 @@ The data for this problem set is a state-by-year panel. Observations are uniquel
 ```{r import data, include = TRUE}
 #data_ori <- read_dta("./data/stevenson_wolfers_210.dta")
 data_ori <- read_dta("stevenson_wolfers_210.dta")
+
+## data clearing
+data <- data_ori %>% 
+        mutate(ln_suicide_rate = log(suiciderate_jag)) %>%   # take a natural log of suicide
+        filter(sex == 2) %>%                                 # filter by women
+        mutate(st     = factor(st),
+               year_f = factor(year))
+str(data)
 ```
 
 ## 12.	We will begin by estimating a simple 2x2 difference-in-differences regression.
@@ -60,10 +68,6 @@ Question 12 (a) – Suggested Steps:
   b.	Remember to cluster the st. errors at the state level.
 
 ```{r 12a_1, include = TRUE}
-## data clearing
-data <- data_ori %>% 
-        mutate(ln_suicide_rate = log(suiciderate_jag)) %>%   # take a natural log of suicide
-        filter(sex == 2)                                     # filter by women
 
 ## create a new data set for regression
 data_12a <- data %>% 
@@ -73,7 +77,7 @@ data_12a <- data %>%
             filter(divyear == 1973 | divyear > 1996)        # filter states !(uni-divorce passed in 1993 or never by 1996 (the max of the dataset))
 
 ## regression
-reg_12a <- felm(ln_suicide_rate ~ treat + post + DiD|0|0|st, data = data_12a)
+reg_12a <- felm(ln_suicide_rate ~ treat + post + DiD|st|0|st, data = data_12a)
 summary(reg_12a)
 
                     
@@ -84,7 +88,8 @@ stargazer(reg_12a,
           title = "changes in Divorce rate by state",
           type = "latex",
           notes.align = "l",
-          notes = "\\parbox[t]{10cm}{Treatment variable is 1 if the state introduced the unilateral divorce act in 1973,
+          notes = "\\parbox[t]{10cm}{Treatment variable is 1 
+                   if the state introduced the unilateral divorce act in 1973,
                    and it is 0 if the state had never introduced the act by 1996.
                    Post variable is 1 if the data was observed after 1973, otherwise, it is 0.
                    the parenthesis below coefficients are clustered standard error by states.}",
@@ -127,17 +132,21 @@ data_13b <- data %>%
             mutate(lag_f  = fct_relevel(lag_f, "-1")) # relevel factors from -1
 
 ## regression
-reg_13b <- felm(ln_suicide_rate ~ lag_f| st + year |0|st, data = data_13b)
+reg_13b <- felm(ln_suicide_rate ~ lag_f| st + year_f |0|st, data = data_13b)
 summary(reg_13b)
 
 ## plot
 data_13b_plot <- data.frame(x  = c(-6:12),
                  y  = c(reg_13b$coefficients[1:5], 0, reg_13b$coefficients[6:18]),
                  up = c(reg_13b$coefficients[1:5], 0, reg_13b$coefficients[6:18]) + 1.96*c(reg_13b$se[1:5], NA, reg_13b$se[6:18]),
-                 lp = c(reg_13b$coefficients[1:5], 0, reg_13b$coefficients[6:18]) - 1.96*c(reg_13b$se[1:5], NA, reg_13b$se[6:18]))
+                 lp = c(reg_13b$coefficients[1:5], 0, reg_13b$coefficients[6:18]) - 1.96*c(reg_13b$se[1:5], NA, reg_13b$se[6:18]),
+                 zr = rep(0, 19))
 
 ggplot(data = data_13b_plot, aes(x = x))+
-  geom_line(aes(y= y))
+  geom_ribbon(aes(ymin = lp, ymax = up), fill = "grey70")+
+  geom_line(aes(y = y), color = "red")+
+  geom_line(aes(y = zr))
+
 
 ```
 
