--- a/PS3_KTakata.Rmd
+++ b/PS3_KTakata.Rmd
@@ -2,7 +2,9 @@
 title: "PS3"
 author: "Kohei Takata"
 date: "4/1/2022"
-output: pdf_document
+output:
+  word_document: default
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
